--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+* {
+  margin: 0px;
+}
+#header {
+  margin-top: 20px;
+}
+h1, h2, h3, .description {
   text-align: center;
+  margin-bottom: 15px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#titleGraph {
+  text-align: -webkit-center; 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#graph {
+  margin-top: 25px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#mainNav {
+  color: #495057 !important;
+  background-color: #e9ecef !important;
+  border-color: #dee2e6 !important;
+  border-radius: 0.25rem;
+  margin-top: 25px;
 }
