Item count up and add to chart ready

--- a/src/components/itemCount/itemCount.css
+++ b/src/components/itemCount/itemCount.css
@@ -6,7 +6,7 @@
 	font-size: 1.3rem;
 	margin-top: 15px;
 }
-#itemSelected, #stock {
+#itemSelected, #stock, #yourChart {
 	text-align: center;
 }
 #items {
