--- a/src/components/item/item.css
+++ b/src/components/item/item.css
@@ -1,4 +1,4 @@
 .card-img-top {
-	max-height: 150px !important;
-	max-width: 150px !important;
+	height: 150px !important;
+	width: 150px !important;
 }
