--- a/src/components/cartWidget/cartWidget.css
+++ b/src/components/cartWidget/cartWidget.css
@@ -1,10 +1,10 @@
-#cart {
+.cart {
 	text-decoration: none;
 	color: #000000;
-	font-size: 30px;
-	padding-left: 60px;
+	font-size: 25px;
+	padding-left: 10px;
 }
-#cart:hover {
+.cart:hover {
 	text-decoration: none;
 	color: inherit;
 }
