--- a/src/components/orderCreator/orderCreator.css
+++ b/src/components/orderCreator/orderCreator.css
@@ -1,4 +1,4 @@
-.form {
+.form, .order {
 	padding: 20px 0px;
 	text-align: -webkit-center;
 	margin: 30px 15px;
@@ -12,4 +12,9 @@ input {
 }
 .form-control {
 	width: 75% !important;
+}
+.errorP {
+	color: lightcoral;
+	font-size: 14px;
+	margin-top: 0px !important;
 }
