--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -11,12 +11,16 @@
 	border-radius: 0.25rem;
 }
 .itemRow {
+	margin-top: 10px;
+}
+.cartTitle {
+	text-align: center;
 	margin-top: 30px;
 }
 .items {
 	padding: 10px 0px;
 	text-align: -webkit-center;
-	margin: 30px 15px;
+	margin: 10px 15px;
 	border-radius: 41px;
 	background: #ffffff;
 	box-shadow:  5px 5px 10px #dbdbdb,
@@ -25,7 +29,7 @@
 .totalItems {
 	padding: 10px 0px;
 	text-align: -webkit-center;
-	margin: 50px 0px;
+	margin: 20px 0px;
 	border-radius: 41px;
 	background: #ffffff;
 	box-shadow:  5px 5px 10px #dbdbdb,
@@ -35,8 +39,10 @@
 	height: 150px !important;
 	width: 150px !important;
 }
-.bts {
+.cartDetails {
+	display: inline-block;
+}
+.bts-items {
 	border-radius: 0.25rem;
-	display: block;
-	margin-top: 8px;
+	display: inline-block;
 }
