--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,6 +9,16 @@
 	margin-top: 15px;
 	margin-bottom: 10px;
 }
+@media only screen and (min-width: 576px) and (max-width:768px) {
+	.footer {
+		width: 70%;
+	}
+}
+@media only screen and (max-width: 576px) {
+	.footer {
+		width: 80%;
+	}
+}
 :root {
 	--space: 1.5em 0;
 	--space: 2em 0;
